--- a/src/app/domains/signup/signup.component.html
+++ b/src/app/domains/signup/signup.component.html
@@ -1,1 +1,62 @@
-<p>signup works!</p>
+<app-header>
+
+<div class="login-component">
+    <div class="login-component__container">
+        <div class="login-form-wrapper">
+            <main class="login-form-side">
+                <form class="login-form">
+                    <div class="login-form-welcome-row">
+                        <h1>Sign up</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                    </div>
+                    <div class="text-field">
+                        <label for="Username">Username</label>
+                        <input type="Username" id="Username" name="Username" autocomplete="off" placeholder="Your username"
+                            required>
+                            <div class="error-message">Username in incorrect format</div>
+                    </div>
+                    <div class="text-field">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" autocomplete="off" placeholder="you@example.com"
+                            required>
+                        <div class="error-message">Email in incorrect format</div>
+                    </div>
+                    <div class="text-field">
+                        <label for="password">Password</label>
+                        <input id="password" type="password" name="password" placeholder="Your password"
+                            title="Minimum 6 characters at least 1 Alphabet and 1 Number"
+                            pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$" required>
+                        <div class="error-message">Minimum 6 characters at least 1 Alphabet and 1 Number</div>
+                    </div>
+                    <div class="text-field">
+                        <label for="password">Confirm password</label>
+                        <input id="password" type="password" name="password" placeholder="Your password"
+                            title="Password doesn´t match"
+                           required>
+                        <div class="error-message">Minimum 6 characters at least 1 Alphabet and 1 Number</div>
+                    </div>
+
+                    <div class="login-form__conditions">
+                        <input type="checkbox" required>
+                        <p>Accept terms y conditions</p>
+                    </div>
+
+                    <button class="login-form__button" type="submit">
+                        Log In
+                    </button>
+
+                    <div class="login-form__actions">
+                        <div class="login-form__row">
+                            <span>Already have an account?</span>
+                            <a href="#" title="Reset Password">
+                                Log In
+                            </a>
+                        </div>
+                    </div>
+                </form>
+            </main>
+            <aside class="info-side">
+            </aside>
+        </div>
+    </div>
+</div>
