Move css sign up variables to general css file

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,19 @@
   --aclonica-title-font: "Aclonica", sans-serif;
   --arvo-subtitle-font: "Arvo", serif;
   --source3-text-font: "Source Sans 3", sans-serif;
+  --primary: #000000;
+  --primary-light: #22211f;
+  --primary-disabled: #363435;
+  --primary-lighter: #454344;
+  --secondary: #1d1d1d;
+  --text: #11181c;
+  --text-gray: #687076;
+  --text-placeholder: #8890a7;
+  --border: #dfe3e6;
+  --btn-bg: #ededed;
+  --input-bg: #f1f2f3;
+  --background: #f8f8ff;
+  --error: #e5484d;
 }
 
 /* Globals */
