--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -15,12 +15,12 @@
     <div id="footer">
         <div class="footer__container">
             <div class="footer__logo">
-                <a href="index.html"><img src="img/Logo completo BIT project__horizontal.svg" alt="Logo"></a>
+                <a href="index.html"><img src="../../../assets/img/Logo_completo_BIT_project__horizontal.svg" alt="BIT Logo"></a>
             </div>
             <div class="footer__links">
                 <a href="#" class="footer__link">About Us</a>
                 <a href="#" class="footer__link">Terms & Conditions</a>
-                <img class="footer__link--github" src="img/github.svg" alt="Github logo">
+                <img class="footer__link--github" src="../../../assets/img/github.svg" alt="Github logo">
             </div>
         </div>
     </div>
