--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar">
 
         <div class="navbar__left">
-            <img class="navbar__logo" src="..\..\assets\img\Logo completo BIT project__horizontal.svg" alt="Main Logo">
+            <img class="navbar__logo" src="../../../assets/img/Logo_completo_BIT_project__horizontal.svg" alt="Main Logo">
         </div>
         <div class="navbar-buttons__mobile">
             <img class="navbar-buttons__logo" src="..\..\assets\img\Menu.svg" alt="Menu logo">
