--- a/src/app/components/cart-experience/cart-experience.component.css
+++ b/src/app/components/cart-experience/cart-experience.component.css
@@ -16,7 +16,6 @@
   font-weight: 600;
 }
 
-.experience-cart__left-container,
 .experience-cart__right-container {
   display: flex;
   flex-direction: column;
@@ -33,8 +32,8 @@
 }
 
 .experience-cart__icon {
-  border-radius: 10px;
   width: 100%;
+  height: 20%;
 }
 
 .experience-cart__delete {
@@ -45,14 +44,41 @@
   right: 3%;
 }
 
-@media (min-width: 768px) {
+.booking-date__container {
+  display: flex;
+  flex-direction: column;
+  font-family: var(--arvo-subtitle-font);
+  max-width: 50%;
+  row-gap: .5rem;
+}
+
+.booking-date__date,
+.booking-date__time {
+  font-weight: 600;
+}
+
+.booking-date__container input {
+  width: 8rem;
+}
+
+.booking-date__container:first-child {
+  margin-top: 1rem;
+}
+
+.booking-date__container:last-child {
+  margin-bottom: 0rem;
+}
+
+@media (min-width: 1024px) {
 
   .experience-cart__card {
     flex-direction: row;
   }
 
   .experience-cart__icon {
-    width: 5.5rem;
+    border-radius: 10px;
+    width: 10rem;
+    height: 10rem;
   }
 
   .experience-cart__left-container,
@@ -74,5 +100,9 @@
     width: clamp(0.4rem, 8vw, 2rem);
     bottom: 8%;
     right: 2%;
+  }
+
+  .booking-date__container input {
+    max-width: 9rem;
   }
 }
