--- a/src/app/components/cart-experience/cart-experience.component.html
+++ b/src/app/components/cart-experience/cart-experience.component.html
@@ -1,14 +1,20 @@
 <article class="experience-cart__card">
-    
     <div class="experience-cart__left-container">
         <img class="experience-cart__icon" src="../../../assets/img/bg-card.jpg" alt="experience icon">
     </div>
 
     <div class="experience-cart__right-container">
-        <p class="experience-cart__title">EXPERIENCE 1 </p>
+        <p class="experience-cart__title">EXPERIENCE 1</p>
         <p class="experience-cart__price">$750,000</p>
+        <div class="booking-date__container">
+            <p class="booking-date__date">Booking Date:</p>
+            <input type="date">
+        </div>
+        <div class="booking-date__container">
+            <p class="booking-date__time">Booking Time:</p>
+            <input type="time">
+        </div>
     </div>
 
-    <img src="../../../assets/img/delete.svg" alt="delete" class="experience-cart__delete">
-
+    <img src="assets/img/delete.svg" alt="delete" class="experience-cart__delete">
 </article>
