--- a/src/app/domains/checkout-page/checkout-page.component.css
+++ b/src/app/domains/checkout-page/checkout-page.component.css
@@ -13,21 +13,21 @@
   display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
+  background-color: #ddd7d7e1;
+  border: 5px solid #000;
+  padding: 1rem;
+  border-radius: 20px;
+  padding-bottom: 1rem;
 }
 
 /* ===================================================================================================
   Left Side
 =================================================================================================== */
 
-.main__experience-cart,
-.main__booking-date {
+.main__experience-cart {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
-  background-color: #ddd7d7e1;
-  border: 5px solid #000;
-  padding: 1rem;
-  border-radius: 20px;
 }
 
 .experience-cart__main-title {
@@ -93,13 +93,17 @@
   font-family: "Courier New", monospace;
   position: absolute;
   color: white;
-  font-size: clamp(0.6rem, 1.8vw, 1.1rem);
+  font-size: clamp(0.4rem, 1.8vw, 1.1rem);
 }
 
 .credit-card__number {
   bottom: 35%;
   left: 10%;
   font-family: arial, sans-serif
+}
+
+.credit-card__number span {
+  padding: 0 .3rem;
 }
 
 .credit-card__name {
@@ -165,6 +169,12 @@ input[type="number"]::-webkit-outer-spin-button {
 
 @media (min-width: 768px) {
     
+  .main__experience-cart {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
+  }
+
   /* Booking Date ========================== */
 
   .booking-date__container {
@@ -200,11 +210,11 @@ input[type="number"]::-webkit-outer-spin-button {
     column-gap: 2rem;
   }
 
-  .main__experience-cart,
-  .main__booking-date {
+  .main__experience-cart {
     max-height: 100%;
+    display: flex;
+    flex-direction: column;
   }
-
   .credit-card__container {
     width: 80%;
     margin: 0;
