Edit about us domain

--- a/src/app/domains/aboutus/aboutus.component.html
+++ b/src/app/domains/aboutus/aboutus.component.html
@@ -1,3 +1,4 @@
+<app-header/>
 
     <main>
         <section id="boxes">
@@ -86,5 +87,6 @@
         </section>
 
     </main>
-
+    
+<app-footer/>
 
