--- a/src/app/domains/home/home.component.css
+++ b/src/app/domains/home/home.component.css
@@ -12,25 +12,18 @@
   z-index: 100;
   width: 100%;
   height: 0.65rem;
-  background-color: rgb(85, 83, 83);
-  border-top: solid 3px black;
-  border-bottom: solid 3px black;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .progress__bar {
   display: block;
   width: 0;
   height: inherit;
-  background: linear-gradient(
-    90deg,
-    #ffc001 0%,
-    #d7e200 16.15%,
-    #80d34a 33.85%,
-    #00d688 50.52%,
-    #01d0c0 66.15%,
-    #0076c8 81.25%,
-    #003f9e 100%
-  );
+  background-color: #4d4c4c;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border-top: solid 3px black;
+  border-bottom: solid 3px black;
 }
 
 /* Search-Bar Section  ===========================================================================================================*/
