add experience content

--- a/src/app/domains/experience-page/experience-page.component.html
+++ b/src/app/domains/experience-page/experience-page.component.html
@@ -1,1 +1,39 @@
-<p>experience-page works!</p>
+<main class="header">
+  <img src="Logo completo BIT project__horizontal 3.png" alt="Trekangle Logo" />
+  <div class="menu">
+    <a href="#">About us</a>
+  </div>
+</main>
+
+<div class="container">
+  <div class="title-bar">TITLE EXPERIENCE PAGE HERE</div>
+  <div class="image-row">
+    <img
+      src="L_5b1510b3c602c_Viajeros_shu.jpg"
+      alt="Main Image"
+      class="main-image"
+    />
+    <img src="capadocia.png" alt="Thumbnail 1" class="thumbnail" />
+    <img src="capadocia.png" alt="Thumbnail 2" class="thumbnail" />
+    <img src="capadocia.png" alt="Thumbnail 3" class="thumbnail" />
+  </div>
+  <div class="description">
+    <p>EXPERIENCE PAGE</p>
+    <p>PRICE: $$$$$</p>
+    <p>lugar: PLACE</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="button-container">
+    <button class="buy-now">Buy Now</button>
+  </div>
+  <div class="comments-section">
+    <p>COMMENTS</p>
+    <div class="comment-icon"></div>
+    <input type="text" />
+    <input type="submit" value="Submit" />
+  </div>
+</div>
+
+<div class="footer">
+  <img src="Logo completo BIT project__horizontal 3.png" alt="Trekangle Logo" />
+</div>
