--- a/src/app/domains/experience-page/experience-page.component.html
+++ b/src/app/domains/experience-page/experience-page.component.html
@@ -1,21 +1,26 @@
-<main class="header">
-  <img src="Logo completo BIT project__horizontal 3.png" alt="Trekangle Logo" />
-  <div class="menu">
-    <a href="#">About us</a>
-  </div>
-</main>
-
-<div class="container">
+<main class="container">
   <div class="title-bar">TITLE EXPERIENCE PAGE HERE</div>
   <div class="image-row">
     <img
-      src="L_5b1510b3c602c_Viajeros_shu.jpg"
+      src="https://uploads.candelaestereo.com/1/2023/02/frases-de-viajes-en-pareja.jpg"
       alt="Main Image"
       class="main-image"
     />
-    <img src="capadocia.png" alt="Thumbnail 1" class="thumbnail" />
-    <img src="capadocia.png" alt="Thumbnail 2" class="thumbnail" />
-    <img src="capadocia.png" alt="Thumbnail 3" class="thumbnail" />
+    <img
+      src="https://as01.epimg.net/deporteyvida/imagenes/2020/07/19/portada/1595141405_165151_1595141540_noticia_normal_recorte1.jpg"
+      alt="Thumbnail 1"
+      class="thumbnail"
+    />
+    <img
+      src="https://as01.epimg.net/deporteyvida/imagenes/2020/07/19/portada/1595141405_165151_1595141540_noticia_normal_recorte1.jpg"
+      alt="Thumbnail 2"
+      class="thumbnail"
+    />
+    <img
+      src="https://as01.epimg.net/deporteyvida/imagenes/2020/07/19/portada/1595141405_165151_1595141540_noticia_normal_recorte1.jpg"
+      alt="Thumbnail 3"
+      class="thumbnail"
+    />
   </div>
   <div class="description">
     <p>EXPERIENCE PAGE</p>
@@ -32,8 +37,4 @@
     <input type="text" />
     <input type="submit" value="Submit" />
   </div>
-</div>
-
-<div class="footer">
-  <img src="Logo completo BIT project__horizontal 3.png" alt="Trekangle Logo" />
-</div>
+</main>
