Add RouterLinks to header and home

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,10 +2,10 @@
     <nav class="navbar">
 
         <div class="navbar__left">
-            <img class="navbar__logo" src="../../../assets/img/Logo_completo_BIT_project__horizontal.svg" alt="Main Logo">
+            <img [routerLink]="'/'" class="navbar__logo" src="assets/img/Logo_completo_BIT_project__horizontal.svg" alt="Main Logo">
         </div>
         <div class="navbar-buttons__mobile">
-            <img class="navbar-buttons__logo" src="..\..\assets\img\Menu.svg" alt="Menu logo">
+            <img class="navbar-buttons__logo" src="assets\img\Menu.svg" alt="Menu logo">
         </div>
 
         <div class="navbar-buttons__desktop">
@@ -15,13 +15,13 @@
             </div>
 
             <div class="navbar-buttons__right">
-                <a class="right__cart" href=""><img src="..\..\assets\img\Shopping Cart.svg" alt="Cart logo"></a>
+                <a class="right__cart" href=""><img src="assets\img\Shopping Cart.svg" alt="Cart logo"></a>
                 <div class="right__button">
                     <div class="right__button__menu">
-                        <img src="..\..\assets\img\Menu_black.svg" alt="Menu logo">
+                        <img src="assets\img\Menu_black.svg" alt="Menu logo">
                     </div>
                     <div class="right__button__user">
-                        <img src="..\..\assets\img\MaleUser.svg" alt="User logo">
+                        <img src="assets\img\MaleUser.svg" alt="User logo">
                     </div>
                 </div>
             </div>
