--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -17,8 +17,8 @@
                         class="main-area__highlight">TREKANGLE!</span></h1><br class="apart__desktop">
                 <p class="main-area__quote">"ad lorem impsum"</p>
                 <div class="main-area__buttons">
-                    <button class="button button--outline">Book experiences</button>
-                    <button class="button button--primary">Join Us</button>
+                    <button [routerLink]="'/'" class="button button--outline">Book experiences</button>
+                    <button [routerLink]="'/sign-up'" class="button button--primary">Join Us</button>
                 </div>
             </div>
             <div class="main-area__image">
