edit login and detail domains

--- a/src/app/domains/experience-page/experience-page.component.html
+++ b/src/app/domains/experience-page/experience-page.component.html
@@ -1,3 +1,5 @@
+<app-header />
+
 <main class="container">
   <div class="title-bar">TITLE EXPERIENCE PAGE HERE</div>
   <div class="image-row">
@@ -38,3 +40,5 @@
     <input type="submit" value="Submit" />
   </div>
 </main>
+
+<app-footer />
