--- a/src/app/domains/signup/signup.component.html
+++ b/src/app/domains/signup/signup.component.html
@@ -4,37 +4,47 @@
     <div class="login-component__container">
         <div class="login-form-wrapper">
             <main class="login-form-side">
-                <form class="login-form">
+                <form class="login-form" (ngSubmit)="onSubmit($event)" [formGroup]="registerForm"> 
                     <div class="login-form-welcome-row">
                         <h1>Sign up</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
                     </div>
                     <div class="text-field">
-                        <label for="Username">Username</label>
-                        <input type="Username" id="Username" name="Username" autocomplete="off" placeholder="Your username"
-                            required>
+                        <label for="name">Name</label >
+                        <input type="text" id="name" name="name" autocomplete="off" placeholder="Your name"
+                            required formControlName="name">
+                            <div class="error-message">Name in incorrect format</div>
+                    </div>
+
+                    <div class="text-field">
+                        <label for="userName">Username</label >
+                        <input type="text" id="userName" name="userName" autocomplete="off" placeholder="Your userName"
+                            required formControlName="userName">
                             <div class="error-message">Username in incorrect format</div>
                     </div>
+
                     <div class="text-field">
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" autocomplete="off" placeholder="you@example.com"
-                            required>
+                            required formControlName="email">
                         <div class="error-message">Email in incorrect format</div>
                     </div>
+
                     <div class="text-field">
                         <label for="password">Password</label>
                         <input id="password" type="password" name="password" placeholder="Your password"
                             title="Minimum 6 characters at least 1 Alphabet and 1 Number"
-                            pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$" required>
+                            pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$" required formControlName="password">
                         <div class="error-message">Minimum 6 characters at least 1 Alphabet and 1 Number</div>
                     </div>
-                    <div class="text-field">
-                        <label for="password">Confirm password</label>
-                        <input id="password" type="password" name="password" placeholder="Your password"
+
+                    <!--<div class="text-field">
+                        <label for="confirm-password">Confirm password</label>
+                        <input id="confirm-password" type="confirm-password" name="confirm-password" placeholder="Confirm your password"
                             title="Password doesn´t match"
                            required>
                         <div class="error-message">Minimum 6 characters at least 1 Alphabet and 1 Number</div>
-                    </div>
+                    </div>-->
 
                     <div class="login-form__conditions">
                         <input type="checkbox" required>
