--- a/src/app/domains/signup/signup.component.html
+++ b/src/app/domains/signup/signup.component.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <button class="login-form__button" type="submit">
-                        Log In
+                        Sign Up
                     </button>
 
                     <div class="login-form__actions">
