--- a/src/app/components/experience/experience.component.css
+++ b/src/app/components/experience/experience.component.css
@@ -4,17 +4,23 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   border: solid 1px black;
+  cursor: pointer;
+  font-family: var(--mochiy-title-font);
 }
 
 .experience__card__image {
   position: relative;
   overflow: hidden;
+  height: 100%;
+  max-height: 13rem;
 }
 
 .experience__card__image img {
   display: block;
   width: 100%;
   transition: transform 0.3s ease;
+  height: 13rem;
+  object-fit: cover;
 }
 
 .experience__card__image img:hover {
@@ -30,12 +36,15 @@
 }
 
 .experience__card__title {
-  font-size: 0.875rem;
-  color: #757575;
+  font-size: 1rem;
+  color: #000000;
 }
 
 .experience__card__price {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  color: gray;
+  margin-top: .2rem;
+  -webkit-text-stroke: 1.5px black;
 }
 
 .experience__card__features {
@@ -50,12 +59,13 @@
 }
 
 .experience__card__feature:first-child {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .experience__card__icon {
   font-size: 1.25rem;
   margin-right: 0.5rem;
+  margin-bottom: .4rem;
 }
 
 .experience__card__text {
