--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,11 +20,13 @@
   max-width: 1700px;
   height: 4rem;
   padding: 0 1rem;
+  position: relative;
 }
 
 .navbar__logo {
   margin-left: -1.5rem;
-  margin-top: .2rem;
+  margin-top: 0.2rem;
+  cursor: pointer;
 }
 
 .navbar-buttons__logo {
@@ -32,7 +34,6 @@
 }
 
 @media (min-width: 1024px) {
-    
   .navbar-buttons__mobile {
     display: none;
   }
@@ -52,11 +53,14 @@
 
   .navbar-buttons__left {
     color: var(--white-bg);
-    border-right: solid 2px var(--white-bg);
     padding: 0.3rem 0;
     font-family: var(--arvo-subtitle-font);
     font-weight: 600;
-    margin-top: .1rem;
+    margin-top: 0.1rem;
+  }
+
+  .add-lines {
+    border-right: solid 2px var(--white-bg);
   }
 
   .left__links {
@@ -71,7 +75,7 @@
   }
 
   .right__cart img {
-    margin-top: .2rem;
+    margin-top: 0.2rem;
     margin-left: 1rem;
     width: 55%;
     cursor: pointer;
@@ -105,5 +109,53 @@
   .right__button__menu img {
     width: 80%;
     padding: 0 0.4rem;
+  }
+
+  /* User-Dropdown ======================================= */
+
+  .user-dropdown {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    right: -0.5rem;
+    top: 3.7rem;
+    background-color: var(--white-bg);
+    border: 2px solid #000000;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.453);
+    border-radius: 10px;
+    z-index: 3;
+    margin-right: 1rem;
+  }
+
+  .user-dropdown::before {
+    content: "";
+    position: absolute;
+    top: -.6rem; /* Ajusta la posición vertical de la flecha */
+    left: 64.5%;
+    transform: translateX(-50%);
+    border: 8px solid transparent;
+    border-top-color: var(--white-bg);
+  }
+
+  .user-dropdown__item {
+    padding: .8rem 2rem;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    width: 5rem;
+  }
+
+  .user-dropdown__item--first {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .user-dropdown__item--last {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  
+  .user-dropdown__item:hover {
+    background-color: rgb(218, 218, 218);
   }
 }
