--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -69,7 +69,7 @@
                 <label class="top-experiences__card" for="item-3" id="experience-3">
                     <img class="top-experiences__card__image"
                         src="https://images.unsplash.com/photo-1533461502717-83546f485d24?ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60"
-                        alt="song">
+                        alt="experience">
                     <div class="image-info">Experience info</div>
                 </label>
             </div>
@@ -84,7 +84,7 @@
 
         @for(experience of experiences(); track experience._id){
 
-        <a href="">
+        <a [routerLink]="['/experience', experience._id]">
             <app-experience [title]="experience.name" [price]="experience.price" 
                 [description]="experience.description"[image]="experience.images[0]" 
                 [place]="experience.place">
