--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
     <nav class="navbar">
 
         <div class="navbar__left">
-            <img [routerLink]="'/'" class="navbar__logo" src="assets/img/Logo_completo_BIT_project__horizontal.svg" alt="Main Logo">
+            <img [routerLink]="'/'" class="navbar__logo" src="assets/img/Logo_completo_BIT_project__horizontal.svg"
+                alt="Main Logo">
         </div>
         <div class="navbar-buttons__mobile">
             <img class="navbar-buttons__logo" src="assets\img\Menu.svg" alt="Menu logo">
@@ -16,7 +17,7 @@
 
             <div class="navbar-buttons__right">
                 @if(isloggedIn()){
-                    <a class="right__cart" href=""><img src="assets\img\Shopping Cart.svg" alt="Cart logo"></a>
+                <a class="right__cart" href=""><img src="assets\img\Shopping Cart.svg" alt="Cart logo"></a>
                 }
                 <div class="right__button" (click)="openDropdown()">
                     <div class="right__button__menu">
@@ -30,21 +31,32 @@
         </div>
 
         <div *ngIf="dropdown()" class="user-dropdown">
-            <div *ngIf="!isloggedIn()" class="user-dropdown__item" [ngClass]="!isloggedIn() ? 'user-dropdown__item--first' : ''">
+            <div *ngIf="!isloggedIn()" class="user-dropdown__item"
+                [ngClass]="!isloggedIn() ? 'user-dropdown__item--first' : ''">
                 <a [routerLink]="'/login'">Log In</a>
             </div>
-            <div *ngIf="!isloggedIn()" class="user-dropdown__item" [ngClass]="!isloggedIn() ? 'user-dropdown__item--last' : ''">
+            <div *ngIf="!isloggedIn()" class="user-dropdown__item"
+                [ngClass]="!isloggedIn() ? 'user-dropdown__item--last' : ''">
                 <a [routerLink]="'/sign-up'">Sign Up</a>
             </div>
-            <div *ngIf="isloggedIn()" class="user-dropdown__item" [ngClass]="isloggedIn() ? 'user-dropdown__item--first' : ''">
+            <div *ngIf="isloggedIn()" class="user-dropdown__item"
+                [ngClass]="isloggedIn() ? 'user-dropdown__item--first' : ''">
                 <a [routerLink]="'/user-settings'">Account</a>
             </div>
-            <div (click)="logOut()" *ngIf="isloggedIn()" class="user-dropdown__item" [ngClass]="isloggedIn() ? 'user-dropdown__item--last' : ''">
+            <div (click)="logOut()" (click)="toggleNotification()" *ngIf="isloggedIn()" class="user-dropdown__item"
+                [ngClass]="isloggedIn() ? 'user-dropdown__item--last' : ''">
                 <a>Sign Out</a>
             </div>
         </div>
 
     </nav>
 
-    
 </header>
+
+<div class="notification" *ngIf="showNotification()">
+    <div class="notification__body">
+        <img src="assets/img/check-circle.svg" alt="Success" class="notification__icon">
+        <p>Logged out. Until next time!</p>
+    </div>
+    <div class="notification__progress"></div>
+</div>
